--- a/css/home.css
+++ b/css/home.css
@@ -66,10 +66,14 @@
 .stopwatch-block {
   display: flex;
   flex-direction: row;
-  bottom: -40%;
+  bottom: 4%;
   position: absolute;
-  right: 0%;
+  right: 7%;
   align-items: center;
+}
+
+.stopwatch-block-mobile {
+  display: none;
 }
 
 .stopwatch-block img {
@@ -79,7 +83,7 @@
   width: 32px;
 }
 
-.stopwatch-block p {
+.stopwatch-block p, .stopwatch-block-mobile p {
   font-family: 'Unbounded';
   font-weight: 400;
   font-size: 18px;
@@ -593,6 +597,22 @@
 
 .repurchased-cars-page.active p {
   color: rgba(122, 184, 255, 1);
+}
+
+/* Default arrow styling */
+.slick-next img, .slick-prev img {
+  transition: filter 0.3s ease;
+  filter: none;
+}
+
+/* When disabled, the forward arrow becomes disabled */
+.slick-next.disabled img {
+  filter: brightness(0) saturate(100%) invert(70%);
+}
+
+/* When disabled, the back arrow  becomes active (if not already) */
+.slick-prev.disabled img {
+  filter: none;
 }
 
 /* Cities section */
@@ -1202,6 +1222,7 @@
   flex-direction: row;
   gap: 8px;
   height: min-content;
+  cursor: pointer;
 }
 
 .reviews-select-stars img {
@@ -1421,6 +1442,15 @@
   outline: none;
 }
 
+.form-group input[type="tel"]::placeholder,
+.form-group input[type="text"]::placeholder {
+  font-family: Montserrat;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: rgba(0, 0, 0, 1);
+}
+
 .attach-photo-block {
   display: flex;
   flex-direction: column;
@@ -1447,6 +1477,10 @@
   margin-top: 8px;
 }
 
+#phone-label.error {
+  color: rgba(240, 79, 73, 1); /* Red for error */
+}
+
 @media (max-width: 1439px) and (min-width: 1280px) {
   /* Hero section */
   .hero-content h1 {
@@ -1461,8 +1495,8 @@
   }
 
   .stopwatch-block {
-    bottom: -50%;
-    right: -5%;
+    bottom: 7%;
+    right: 5%;
   }
 
   .stopwatch-block p {
@@ -1747,8 +1781,8 @@
   }
 
   .stopwatch-block {
-    bottom: -90%;
-    right: 0;
+    bottom: 7%;
+    right: 5%;
   }
 
   .stopwatch-block img {
@@ -2312,19 +2346,24 @@
     gap: 16px;
     margin-top: 32px;
   }
-
+  
   .stopwatch-block {
+    display: none;
+  }
+
+  .stopwatch-block-mobile {
+    display: flex;
     position: relative;
     justify-content: center;
     bottom: 0;
     right: 0;
   }
 
-  .stopwatch-block p {
+  .stopwatch-block-mobile p {
     margin: 0;
   }
   
-  .stopwatch-block img {
+  .stopwatch-block-mobile img {
     margin-left: 0px;
     margin-right: 12px;
     height: 22px;
@@ -3017,6 +3056,7 @@
     height: min-content;
     margin-top: 32px;
     margin-bottom: 16px;
+    cursor: pointer;
   }
 
   .reviews-select-stars-mobile img {
