--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
   overflow: hidden;
   box-shadow: 0px 10px 16px 0px rgba(122, 184, 255, 0.25), 
   0px 0px 10px 0px rgba(255, 255, 255, 0.1) inset;
+  cursor: pointer;
 }
 
 .global-btn img {
