fix: home js code update, add application pop up

--- a/components/header.html
+++ b/components/header.html
@@ -62,8 +62,8 @@
 
 </header>
 
-<div id="popup" class="popup hidden">
-  <div class="popup-content">
+<div id="menu-pop-up" class="menu-pop-up hidden">
+  <div class="menu-pop-up-content">
     <span>Київ</span>
     <span>Вінниця</span>
     <span>Дніпропетровськ</span>
