fix: various fixes
* remove animation from global-button on mobile
* remove tap highlight effect on mobile
* change position to 'absolute' on desktop for language dropdown menu
* add check to close any pop up when overlay is pressed
* add check to manage body scrolling when any pop up opened
* change height of car image in 'car-buyback' mobile section from fixed to auto
* replace 'h3' tag with 'div class="h3"'
* add scale calcs for blocks and images in 'urgent-buyout' section for mobile

--- a/components/header.html
+++ b/components/header.html
@@ -64,23 +64,23 @@
 
 <div id="menu-pop-up" class="menu-pop-up hidden">
   <div class="menu-pop-up-content">
-    <span>Київ</span>
-    <span>Вінниця</span>
-    <span>Дніпропетровськ</span>
-    <span>Житомир</span>
-    <span>Кривий Ріг</span>
-    <span>Львів</span>
-    <span>Миколаїв</span>
-    <span>Одеса</span>
-    <span>Полтава</span>
-    <span>Рівне</span>
-    <span>Суми</span>
-    <span>Харків</span>
-    <span>Херсон</span>
-    <span>Черкаси</span>
-    <span>Чернігів</span>
-    <span>Чернівці</span>
-    <span>Інші міста</span>
+    <a><span>Київ</span></a>
+    <a><span>Вінниця</span></a>
+    <a><span>Дніпропетровськ</span></a>
+    <a><span>Житомир</span></a>
+    <a><span>Кривий Ріг</span></a>
+    <a href="lviv.html"><span>Львів</span></a>
+    <a><span>Миколаїв</span></a>
+    <a><span>Одеса</span></a>
+    <a><span>Полтава</span></a>
+    <a><span>Рівне</span></a>
+    <a><span>Суми</span></a>
+    <a><span>Харків</span></a>
+    <a><span>Херсон</span></a>
+    <a><span>Черкаси</span></a>
+    <a><span>Чернігів</span></a>
+    <a><span>Чернівці</span></a>
+    <a><span>Інші міста</span></a>
   </div>
 </div>
 
@@ -107,23 +107,23 @@
   </div>
 
   <div class="mobile-cities-list" style="display: none;">
-    <span>Київ</span>
-    <span>Вінниця</span>
-    <span>Дніпропетровськ</span>
-    <span>Житомир</span>
-    <span>Кривий Ріг</span>
-    <span>Львів</span>
-    <span>Миколаїв</span>
-    <span>Одеса</span>
-    <span>Полтава</span>
-    <span>Рівне</span>
-    <span>Суми</span>
-    <span>Харків</span>
-    <span>Херсон</span>
-    <span>Черкаси</span>
-    <span>Чернігів</span>
-    <span>Чернівці</span>
-    <span>Інші міста</span>
+    <a><span>Київ</span></a>
+    <a><span>Вінниця</span></a>
+    <a><span>Дніпропетровськ</span></a>
+    <a><span>Житомир</span></a>
+    <a><span>Кривий Ріг</span></a>
+    <a href="lviv.html"><span>Львів</span></a>
+    <a><span>Миколаїв</span></a>
+    <a><span>Одеса</span></a>
+    <a><span>Полтава</span></a>
+    <a><span>Рівне</span></a>
+    <a><span>Суми</span></a>
+    <a><span>Харків</span></a>
+    <a><span>Херсон</span></a>
+    <a><span>Черкаси</span></a>
+    <a><span>Чернігів</span></a>
+    <a><span>Чернівці</span></a>
+    <a><span>Інші міста</span></a>
   </div>
 </div>
   
