--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@ header {
   background-color: rgba(20, 20, 22, 0.32);
   backdrop-filter: blur(48px);
   -webkit-backdrop-filter: blur(48px); /* Safari */
-  box-shadow: 0 4px 68px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 32px rgba(0, 0, 0, 0.5);
   padding: 8px 112px;
   display: flex;
   align-items: center;
@@ -96,6 +96,10 @@ nav ul li a:hover {
   margin-left: 8px;
 }
 
+.lang-extra {
+  position: absolute;
+}
+
 .lang-ukr {
   color: #FFFFFF;
 }
@@ -176,6 +180,10 @@ nav ul li a:hover {
   color: rgba(255, 255, 255, 1);
   margin-bottom: 10px;
   cursor: pointer;
+}
+
+.menu-pop-up-content a {
+  text-decoration: none;
 }
 
 .menu-pop-up-content span:hover {
@@ -314,7 +322,6 @@ nav ul li a:hover {
   .lang-extra {
     display: flex;
     flex-direction: column;
-    position: absolute;
     bottom: -20px;
     right: 25px;
   }
@@ -417,6 +424,8 @@ nav ul li a:hover {
     gap: 20px;
     margin-top: 20px;
     text-align: left;
+    height: 95%;
+    overflow: auto;
   }
 
 }
