--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,11 @@
+.h3 {
+  font-family: 'Unbounded';
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 39.68px;
+  margin-bottom: 64px;
+}
+
 .hero {
   position: relative; 
   background-color: #15151857;
@@ -126,14 +134,6 @@
   z-index: 1;
 }
 
-.car-buyback-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
-}
-
 .car-buyback-content-text-block {
   display: flex;
   flex-direction: row;
@@ -178,14 +178,6 @@
   width: 100%;
   position: relative;
   max-width: 1216px;
-}
-
-.buyback-process-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
 }
 
 .buyback-process-steps-section {
@@ -306,15 +298,6 @@
   width: 100%;
   position: relative;
   max-width: 1216px;
-}
-
-.urgent-buyout-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 48px;
-  margin-top: 0px;
 }
 
 .urgent-buyout-advantages-block {
@@ -448,15 +431,6 @@
   max-width: 1216px;
 }
 
-.repurchased-cars-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
-  margin-top: 0px;
-}
-
 .repurchased-cars-slider-wrapper {
   position: relative;
   display: block;
@@ -547,7 +521,6 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  outline: none;
   width: 56px;
   height: 56px;
   position: relative;
@@ -637,15 +610,6 @@
   max-width: 1216px;
   justify-content: space-between;
   align-items: center;
-}
-
-.cities-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
-  margin-top: 0px;
 }
 
 .cities-info-block {
@@ -792,14 +756,6 @@
   max-width: 1216px;
 }
 
-.blog-articles-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
-}
-
 .blog-articles-slider-wrapper {
   display: none;
 }
@@ -904,15 +860,6 @@
   width: 100%;
   position: relative;
   max-width: 1216px;
-}
-
-.common-questions-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
-  margin-top: 0px;
 }
 
 .common-questions-info-block {
@@ -1052,14 +999,6 @@
   max-width: 1216px;
 }
 
-.reviews-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
-}
-
 .reviews-info-container {
   display: flex;
   flex-direction: column;
@@ -1129,8 +1068,7 @@
   flex-direction: column;
 }
 
-.reviews-leave-review h3 {
-  margin: 0;
+.reviews-leave-review .h3 {
   margin-bottom: 40px;
 }
 
@@ -1189,7 +1127,6 @@
   line-height: 30px;
   color: rgba(255, 255, 255, 1);
   background: transparent;
-  outline: none;
   border: 2px solid rgba(255, 255, 255, 1);
   border-radius: 12px;
   padding: 18px;
@@ -1199,14 +1136,12 @@
 .feedback-form-group input[type="email"] {
   width: 440px;
   height: 49px;
-  box-sizing: border-box;
 }
 
 .feedback-form-group textarea {
   width: 903px;
   height: 151px;
   background: rgba(255, 255, 255, 0.04);
-  box-sizing: border-box;
 }
 
 .feedback-form-group textarea::placeholder, input::placeholder {
@@ -1250,14 +1185,6 @@
   width: 100%;
   position: relative;
   max-width: 1216px;
-}
-
-.editor-group-content h3 {
-  font-family: 'Unbounded';
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 39.68px;
-  margin-bottom: 64px;
 }
 
 .editor-group-info {
@@ -1354,13 +1281,10 @@
   align-items: center;
 }
 
-.send-request-content h1 {
-  font-family: Unbounded;
-  font-weight: 400;
+.send-request-content .h3 {
   font-size: 56px;
   line-height: 69.44px;
   text-align: center;
-  margin-bottom: 64px;
   color: rgba(122, 184, 255, 1);
 }
 
@@ -1386,6 +1310,11 @@
 
 
 @media (max-width: 1439px) and (min-width: 1280px) {
+  .h3 {
+    font-size: 28px;
+    line-height: 34px;
+  }
+
   /* Hero section */
   .hero-content h1 {
     font-size: 50px;
@@ -1409,12 +1338,6 @@
 
   /* Car BuyBack section */
 
-  .car-buyback-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-    margin-bottom: 64px;
-  }
-
   .car-buyback-content img {
     height: 230px;
   }
@@ -1427,11 +1350,6 @@
 
 
   /* BuyBack process section */
-
-  .buyback-process-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
 
   .buyback-process-step-block-1-row div {
     max-width: 500px;
@@ -1457,11 +1375,6 @@
   }
 
   /* Urgent buyout section */
-
-  .urgent-buyout-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
 
   .urgent-buyout-1-image {
     right: 90px;
@@ -1517,17 +1430,7 @@
     width: 307px;
   }
 
-  .repurchased-cars-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
-
   /* Cities section */
-
-  .cities-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
 
   .cities-text-block {
     margin-bottom: 60px;
@@ -1563,11 +1466,6 @@
 
   /* Blog articles section */
 
-  .blog-articles-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
-
   .blog-articles-item-info-block {
     display: flex;
     flex-direction: column;
@@ -1591,11 +1489,6 @@
 
   /* Common questions section */
 
-  .common-questions-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
-
   .common-questions-list {
     max-width: 700px;
   }
@@ -1615,11 +1508,6 @@
   }
 
   /* Reviews section */
-
-  .reviews-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
 
   .reviews-info-review-block p {
     font-size: 17px;
@@ -1645,11 +1533,6 @@
 
   /* Editor group section */
 
-  .editor-group-content h3 {
-    font-size: 28px;
-    line-height: 34px;
-  }
-
   .editor-info p {
     font-size: 17px;
     line-height: 23px;
@@ -1665,7 +1548,12 @@
 
 }
 
-@media (max-width: 1278px) and (min-width: 1024px) {
+@media (max-width: 1279px) and (min-width: 1024px) {
+  .h3 {
+    font-size: 26px;
+    line-height: 32px;
+    margin-bottom: 32px;
+  }
   /* Hero section */
   .hero {
     padding-top: 172px;
@@ -1707,12 +1595,6 @@
     padding-left: 92px;
     padding-right: 92px;
   }
-
-  .car-buyback-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 32px;
-  }
   
   .car-buyback-content-text-block p {
     font-size: 16px;
@@ -1725,12 +1607,6 @@
   .buyback-process {
     padding-left: 92px;
     padding-right: 92px;
-  }
-
-  .buyback-process-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 48px;
   }
 
   .buyback-process-steps-section {
@@ -1783,13 +1659,6 @@
     padding-left: 92px;
     padding-right: 92px;
     padding-top: 80px;
-  }
-
-  .urgent-buyout-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 24px;
-    margin-top: 0px;
   }
 
   .urgent-buyout-list-item {
@@ -1880,13 +1749,6 @@
     width: 307px;
   }
 
-  .repurchased-cars-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 24px;
-    margin-top: 0px;
-  }
-
   .repurchased-cars-info-block {
     margin-top: 16px;
     margin-bottom: 16px;
@@ -1907,12 +1769,6 @@
     padding-top: 80px;
     padding-left: 92px;
     padding-right: 92px;
-  }
-
-  .cities-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 24px;
   }
 
   .cities-text-block {
@@ -1963,13 +1819,6 @@
     padding-top: 80px;
     padding-left: 92px;
     padding-right: 92px;
-  }
-  
-
-  .blog-articles-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 24px;
   }
 
   .blog-articles-info-block {
@@ -2031,12 +1880,6 @@
     padding-top: 80px;
   }
 
-  .common-questions-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 24px;
-  }
-
   .common-questions-info-block {
     margin-bottom: 60px;
   }
@@ -2083,13 +1926,6 @@
     padding-left: 92px;
     padding-right: 92px;
   }
-  
-
-  .reviews-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 24px;
-  }
 
   .reviews-info-review-block p {
     font-size: 16px;
@@ -2113,7 +1949,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 200px;
+    height: 180px;
   }
   
   .feedback-form-group input[type="text"],
@@ -2131,12 +1967,6 @@
     padding-left: 92px;
     padding-right: 92px;
     padding-top: 80px;
-  }
-
-  .editor-group-content h3 {
-    font-size: 26px;
-    line-height: 32px;
-    margin-bottom: 24px;
   }
 
   .editor-info p {
@@ -2173,7 +2003,7 @@
     padding: 80px 92px 92px;
   }
 
-  .send-request-content h1 {
+  .send-request-content .h3 {
     font-size: 48px;
     line-height: 59px;
     margin-bottom: 24px;
@@ -2181,12 +2011,17 @@
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
+  .h3 {
+    font-size: 18px;
+    line-height: 22.32px;
+    margin-bottom: 32px;
+  }
+
   .hero {
     position: relative; 
     background: none;
     background-color: #15151857;
-
     padding-left: 16px;
     padding-right: 16px;
     padding-top: 106px;
@@ -2266,12 +2101,6 @@
     display: flex;
     padding-bottom: 80px;
   }
-
-  .car-buyback-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
-  }
   
   .car-buyback-content-text-block {
     display: flex;
@@ -2296,7 +2125,8 @@
   }
 
   .car-buyback-mobile img {
-    height: 192px;
+    min-height: 192px;
+    height: auto;
     width: 100%;
     object-fit: cover;
   }
@@ -2305,12 +2135,6 @@
 
   .buyback-process {
     padding: 80px 16px 16px;
-  }
-
-  .buyback-process-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
   }
 
   .buyback-process-steps-section {
@@ -2333,13 +2157,13 @@
   .buyback-process-step-block-1-row div {
     max-width: 100%;
     width: 100%;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    padding-left: 16px;
+    padding: 24px 16px;
     border-radius: 24px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
+
   }
 
   .buyback-process-step-block-1-row img {
@@ -2440,12 +2264,6 @@
     padding: 80px 16px 16px;
   }
 
-  .urgent-buyout-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
-  }
-
   .urgent-buyout-advantages-block {
     min-height: 799px;
   }
@@ -2475,15 +2293,22 @@
     line-height: 19.5px;
   }
 
+  .urgent-buyout-images-block {
+    position: relative;
+    width: 100%;
+    height: auto;
+    min-height: 400px;
+  }
+  
   .urgent-buyout-1-image {
     z-index: 1;
     bottom: 90px;
     top: unset;
     right: 57px;
     height: 245px;
-    border-radius: 16px;
+    border-radius: 24px;
   }
-
+  
   .urgent-buyout-1-block {
     top: unset;
     right: 0;
@@ -2492,14 +2317,14 @@
     bottom: 260px;
     border-radius: 6px;
   }
-
+  
   .urgent-buyout-2-image {
     bottom: 50px;
     right: 5px;
     height: 93px;
-    border-radius: 8px;
+    border-radius: 12px;
   }
-
+  
   .urgent-buyout-2-block {
     position: absolute;
     bottom: 20px;
@@ -2508,12 +2333,12 @@
     height: 46px;
     border-radius: 6px;
   }
-
+  
   .urgent-buyout-3-image {
     bottom: 0;
     left: 0;
     height: 106px;
-    border-radius: 8px;
+    border-radius: 12px;
   }
   
   .urgent-buyout-3-block {
@@ -2524,11 +2349,54 @@
     border-radius: 4px;
   }
 
+  /* Scale all properties proportionally as viewport width grows from 375px */
+  .urgent-buyout-1-image {
+    height: clamp(245px, 245px + (100vw - 375px) * 0.4, 1000px);
+    right: clamp(57px, 57px + (100vw - 375px) * 0.1, 200px);
+    bottom: clamp(90px, 90px + (100vw - 375px) * 0.1, 200px);
+  }
+
+  .urgent-buyout-1-block {
+    width: clamp(25px, 25px + (100vw - 375px) * 0.05, 100px);
+    height: clamp(77px, 77px + (100vw - 375px) * 0.15, 300px);
+    bottom: clamp(260px, 260px + (100vw - 375px) * 0.1, 500px);
+  }
+
+  .urgent-buyout-2-image {
+    height: clamp(93px, 93px + (100vw - 375px) * 0.2, 400px);
+    right: clamp(5px, 5px + (100vw - 375px) * 0.01, 50px);
+    bottom: clamp(50px, 50px + (100vw - 375px) * 0.05, 100px);
+  }
+
+  .urgent-buyout-2-block {
+    width: clamp(49px, 49px + (100vw - 375px) * 0.1, 200px);
+    height: clamp(46px, 46px + (100vw - 375px) * 0.1, 180px);
+    right: clamp(150px, 150px + (100vw - 375px) * 0.1, 300px);
+    bottom: clamp(20px, 20px + (100vw - 375px) * 0.05, 50px);
+  }
+
+  .urgent-buyout-3-image {
+    height: clamp(106px, 106px + (100vw - 375px) * 0.3, 400px);
+    left: clamp(0px, 0px + (100vw - 375px) * 0.1, 50px);
+    bottom: clamp(0px, 0px + (100vw - 375px) * 0.01, 20px);
+  }
+
+  .urgent-buyout-3-block {
+    width: clamp(60px, 60px + (100vw - 375px) * 0.1, 240px);
+    height: clamp(30px, 30px + (100vw - 375px) * 0.05, 120px);
+    left: clamp(35px, 35px + (100vw - 375px) * 0.05, 140px);
+    bottom: clamp(144px, 144px + (100vw - 375px) * 0.2, 288px);
+  }
+
+  .urgent-buyout-images-block {
+    min-height: clamp(400px, 400px + (100vw - 375px) * 0.3, 800px);
+  }
+
   .urgent-buyout-guarantees-block {
     margin-top: 80px;
   }
 
-  .urgent-buyout-guarantees-block h3 {
+  .urgent-buyout-guarantees-block .h3 {
     margin-bottom: 20px;
   }
 
@@ -2540,13 +2408,6 @@
 
   .repurchased-cars {
     padding: 80px 16px 16px;
-  }
-
-  .repurchased-cars-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
-    margin-top: 0px;
   }
 
   .repurchased-cars-slider-wrapper {
@@ -2561,7 +2422,6 @@
   .repurchased-cars-slider-block {
     justify-content: center;
   }
-  
 
   .repurchased-cars-slider-block-item img {
     height: 195px;
@@ -2601,10 +2461,6 @@
     content: none;
   }
 
-  .slick-dots li button:focus {
-    outline: none;
-  }
-
   .slick-dots li.slick-active {
     width: 60px;
     background-color: rgba(122, 184, 255, 1);
@@ -2619,13 +2475,6 @@
 
   .cities-content {
     flex-direction: column;
-  }
-
-  .cities-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
-    margin-top: 0px;
   }
 
   .cities-text-block {
@@ -2727,12 +2576,6 @@
     text-align: center;
   }
 
-  .blog-articles-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
-  }
-
   .blog-articles-info-block {
     display: none;
   }
@@ -2746,16 +2589,28 @@
     margin-bottom: 80px !important;
   }
 
+  .slick-track {
+    min-height: 500px !important;
+  }
+
+  .slick-slide {
+    display: flex !important;
+    justify-content: center;
+    height: auto !important;
+  }
+
   .blog-articles-cars-slider-block {
     height: 500px;
   }
 
   .blog-articles-info-block-item {
-    width: 260px;
+    min-width: 260px;
+    width: 70vw;
   }
 
   .blog-articles-info-block-item img {
     height: 190px;
+    object-fit: cover;
   }
 
   .blog-articles-item-info-block {
@@ -2796,13 +2651,6 @@
 
   .common-questions {
     padding: 80px 16px 0;
-  }
-
-  .common-questions-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
-    margin-top: 0px;
   }
 
   .common-questions-line {
@@ -2885,10 +2733,8 @@
     text-align: start;
   }
 
-  .reviews-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 0;
+  .reviews-content .h3 {
+    margin-bottom: 8px;
   }
 
   .reviews-info-date {
@@ -2993,12 +2839,6 @@
     color: #FFFFFF;
   }
 
-  .editor-group-content h3 {
-    font-size: 18px;
-    line-height: 22.32px;
-    margin-bottom: 32px;
-  }
-
   .editor-group-info {
     display: flex;
     flex-direction: column;
@@ -3051,10 +2891,9 @@
     padding: 80px 16px 64px;
   }
 
-  .send-request-content h1 {
+  .send-request-content .h3 {
     font-size: 24px;
     line-height: 29.76px;
-    margin-bottom: 32px;
   }
 
   .floating-white-block {
