--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 * {
   box-sizing: border-box;
+  outline: none !important;
+  -webkit-tap-highlight-color: transparent !important;
+  /* user-select: none; user can select text */
 }
 
 body {
@@ -8,6 +11,14 @@ body {
   font-family: 'Unbounded', sans-serif;
   background-color: #222227;
   display: flex;
+}
+
+.body-no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
 
 .global-btn {
@@ -26,7 +37,6 @@ body {
   transition: background-color 0.2s ease;
   border-radius: 100px;
   height: 64px;
-  box-sizing: border-box;
   position: relative;
   overflow: hidden;
   box-shadow: 0px 10px 16px 0px rgba(122, 184, 255, 0.25), 
@@ -103,8 +113,6 @@ global-button {
   line-height: 30px;
   color: rgba(0, 0, 0, 1);
   border: 2px solid #000;
-  box-sizing: border-box;
-  outline: none;
 }
 
 .form-group input[type="tel"]::placeholder,
