--- a/css/header.css
+++ b/css/header.css
@@ -248,7 +248,194 @@ nav ul li a:hover {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) and (min-width: 768px) {
+  header {
+    height: 66px;
+    padding: 16px 32px;
+  }
+  
+  .header-logo img {
+    height: 31px;
+    width: 40px;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .header-call {
+    display: none;
+  }
+
+  .header-call-mobile {
+    display: flex;
+    align-items: center;
+  }
+  
+  .call-icon {
+    width: 18px;
+    height: 18px;
+    margin-right: 4px;
+  }
+  
+  .phones {
+    display: flex;
+    flex-direction: column;
+    margin-left: 4px;
+    gap: 6px;
+  }
+  
+  .header-call-mobile .phones span {
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14.63px;
+    color: #BEBEBE;
+    margin: 0;
+  }
+
+  .header-mobile {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+  
+  .header-lang {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .lang-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+
+  .lang-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .lang-extra {
+    display: flex;
+    flex-direction: column;
+    bottom: -20px;
+    right: 25px;
+  }
+  
+  .header-lang .lang-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 4px;
+  }
+  
+  .header-lang .lang {
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14.63px;
+    margin-left: 4px;
+  }
+  
+  .lang-ukr {
+    color: #FFFFFF;
+    margin-top: 4px;
+  }
+  
+  .lang-rus {
+    color: #BEBEBE;
+  }
+
+  .hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    width: 15px;
+    gap: 4px;
+    cursor: pointer;
+  }
+
+  .hamburger-menu-line {
+    width: 100%;
+    height: 2px;
+    background-color: rgba(122, 184, 255, 1);
+    border-radius: 3px;
+  }
+
+  .mobile-menu-pop-up {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20, 20, 22, 0.56);
+    backdrop-filter: blur(48px);
+    box-shadow: 
+      inset 0px 0px 68px rgba(0, 0, 0, 0.05),
+      inset 0px 4px 4px rgba(0, 0, 0, 0.05);
+    padding: 24px;
+    z-index: 9999;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s ease;
+  }
+  
+  .mobile-menu-pop-up.open {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .mobile-menu-header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .pop-up-back-arrow, .pop-up-close-icon {
+    cursor: pointer;
+  }
+
+  .mobile-menu-content {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 20px;
+    width: fit-content;
+  }
+
+  .mobile-menu-content span, .mobile-cities-list span {
+    font-family: Unbounded;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24.8px;
+    color: rgba(227, 234, 241, 1);
+    cursor: pointer;
+  }
+
+  .mobile-menu-content span:hover, .mobile-cities-list span:hover {
+    color: rgba(122, 184, 255, 1);
+  }
+
+  .mobile-cities-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+    text-align: left;
+    height: 95%;
+    overflow: auto;
+  }
+
+  .mobile-cities-list a {
+    width: fit-content;
+    text-decoration: none;
+  }
+}
+
+@media (max-width: 767px) {
   header {
     height: 66px;
     padding: 16px;
@@ -426,6 +613,10 @@ nav ul li a:hover {
     text-align: left;
     height: 95%;
     overflow: auto;
+  }
+
+  .mobile-cities-list a {
+    text-decoration: none;
   }
 
 }
