--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,22 @@ global-button {
   }
 }
 
-@media (max-width: 768px) and (min-width: 320px) {
+@media (max-width: 1023px) and (min-width: 768px) {
+  .global-btn {
+    width: 290px;
+    height: 48px;
+    font-size: 14px;
+    line-height: 19px;
+    padding-left: 20px;
+  }
+
+  .global-btn img {
+    margin-left: 12px;
+    height: 48px;
+  }
+}
+
+@media (max-width: 767px) {
   .global-btn {
     width: 297px;
     height: 48px;
