feat: add lviv page
* add 'lviv' page
* fix "ОСТАННІ СТАТТІ БЛОГУ" on tablet size

--- a/css/footer.css
+++ b/css/footer.css
@@ -102,7 +102,7 @@
 }
 
 .phones span {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat';
   font-weight: 500;
   font-size: 16px;
   line-height: 19.5px;
