--- a/css/home.css
+++ b/css/home.css
@@ -2126,9 +2126,9 @@
 
   .car-buyback-mobile img {
     min-height: 192px;
-    height: auto;
     width: 100%;
     object-fit: cover;
+    height: 300px !important;
   }
 
   /* BuyBack process section */
@@ -2387,6 +2387,10 @@
     background-color: rgba(122, 184, 255, 1);
   }
 
+  .repurchased-cars-slider-mobile .slick-track {
+    min-height: 400px !important;
+  }
+
   /* Cities section */
 
   .cities {
@@ -2637,10 +2641,6 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 22.5px;
-  }
-
-  .car-buyback-mobile img {
-    height: 300px !important;
   }
 
   /* Reviews section */
@@ -3245,6 +3245,7 @@
 
   .repurchased-cars-slider-block {
     justify-content: center;
+    margin-bottom: 0px;
   }
 
   .repurchased-cars-slider-block-item img {
@@ -3288,6 +3289,10 @@
   .slick-dots li.slick-active {
     width: 60px;
     background-color: rgba(122, 184, 255, 1);
+  }
+
+  .repurchased-cars-slider-mobile .slick-track {
+    min-height: 620px !important;
   }
 
   /* Cities section */
@@ -3413,7 +3418,7 @@
     margin-bottom: 80px !important;
   }
 
-  .slick-track {
+  .blog-articles-cars-slider .slick-track {
     min-height: 500px !important;
   }
 
