feat: add 'vinnytsia' page

--- a/components/header.html
+++ b/components/header.html
@@ -65,7 +65,7 @@
 <div id="menu-pop-up" class="menu-pop-up hidden">
   <div class="menu-pop-up-content">
     <a><span>Київ</span></a>
-    <a><span>Вінниця</span></a>
+    <a href="vinnytsia.html"><span>Вінниця</span></a>
     <a><span>Дніпропетровськ</span></a>
     <a><span>Житомир</span></a>
     <a><span>Кривий Ріг</span></a>
@@ -108,7 +108,7 @@
 
   <div class="mobile-cities-list" style="display: none;">
     <a><span>Київ</span></a>
-    <a><span>Вінниця</span></a>
+    <a href="vinnytsia.html"><span>Вінниця</span></a>
     <a><span>Дніпропетровськ</span></a>
     <a><span>Житомир</span></a>
     <a><span>Кривий Ріг</span></a>
