feat: add 'contacts' page
* add 'contacts' page
* replace 'h4' to 'div class="h4" in footer
* footer style fix for tablets

--- a/components/footer.html
+++ b/components/footer.html
@@ -26,14 +26,20 @@
 
     <div class="footer-mobile-info">
       <div class="footer-info-mobile">
-        <h4>Інформація</h4>
-        <p>Головна</p>
-        <p>Блог</p>
+        <div class="h4">Інформація</div>
+        <a href="home.html">
+          <p>Головна</p>
+        </a>
+        <a href="blog.html">
+          <p>Блог</p>
+        </a>
         <p>Про нас</p>
-        <p>Контакти</p>
+        <a href="contacts.html">
+          <p>Контакти</p>
+        </a>
       </div>
       <div class="footer-contacts-mobile">
-        <h4>Контакти</h4>
+        <div class="h4">Контакти</div>
         <div class="footer-call">
           <img src="../img/call.svg" alt="Call icon" class="call-icon">
           <div class="phones">
@@ -52,7 +58,7 @@
 
     
     <div class="footer-contacts">
-      <h4>Контакти</h4>
+      <div class="h4">Контакти</div>
       <div class="footer-call">
         <img src="../img/call.svg" alt="Call icon" class="call-icon">
         <div class="phones">
@@ -69,11 +75,17 @@
     </div>
 
     <div class="footer-info">
-      <h4>Інформація</h4>
-      <p>Головна</p>
-      <p>Блог</p>
+      <div class="h4">Інформація</div>
+      <a href="home.html">
+        <p>Головна</p>
+      </a>
+      <a href="blog.html">
+        <p>Блог</p>
+      </a>
       <p>Про нас</p>
-      <p>Контакти</p>
+      <a href="contacts.html">
+        <p>Контакти</p>
+      </a>
     </div>
 
     <div class="footer-action-buttons">
