--- a/components/header.html
+++ b/components/header.html
@@ -101,9 +101,9 @@
   <div class="mobile-menu-content">
     <span>Автовикуп після ДТП</span>
     <span class="menu-item" data-target="cities">Міста</span>
-    <span>Блог</span>
-    <span>Про нас</span>
-    <span>Контакти</span>
+    <a href="blog.html"><span>Блог</span></a>
+    <a><span>Про нас</span></a>
+    <a href="contacts.html"><span>Контакти</span></a>
   </div>
 
   <div class="mobile-cities-list" style="display: none;">
