--- a/css/footer.css
+++ b/css/footer.css
@@ -62,7 +62,7 @@
   margin: 0;
 }
 
-.footer-contacts h4, .footer-info h4 {
+.footer-contacts .h4, .footer-info .h4 {
   font-family: Unbounded;
   font-weight: 400;
   font-size: 18px;
@@ -72,7 +72,7 @@
   margin-bottom: 16px;
 }
 
-.footer-contacts h4 {
+.footer-contacts .h4 {
   margin-bottom: 24px;
 }
 
@@ -116,6 +116,10 @@
   line-height: 19.5px;
   color: rgba(255, 255, 255, 1);
   margin: 8px 0;
+}
+
+.footer-info a, .footer-info-mobile a {
+  text-decoration: none;
 }
 
 .footer-action-buttons {
@@ -203,7 +207,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .app-footer {
     width: 100%;
     background-color: #15151857;
@@ -293,7 +297,7 @@
     width: 138px;
   }
 
-  .footer-contacts-mobile h4, .footer-info-mobile h4 {
+  .footer-contacts-mobile .h4, .footer-info-mobile .h4 {
     font-family: Montserrat;
     font-weight: 500;
     font-size: 16px;
